--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -144,3 +144,17 @@ notes:
     Back: |
       ![](CCAC-02.8-17.1.jpg)
     Annotations: ''
+-- id: 1547213342121
+  media:
+  - path: ${file_dir}/images/02.8-19.1.jpg
+    name: CCAC-02.8-19.1.jpg
+  fields:
+    Front: >
+      CCAC 02.8 19: Sketch the graph of a function that satisfies all of the given
+      conditions.
+
+      $f'(0) = f'(4) = 0$, $f'(x) > 0$ if $x < 0$, $f'(x) < 0$ if $0 < x < 4$ or if
+      $x > 4$, $f''(x) > 0$ if $2 < x < 4$, $f''(x) < 0$ if $x < 2$ or $x > 4$.
+    Back: |
+      ![](CCAC-02.8-19.1.jpg)
+    Annotations: ''
