--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -158,3 +158,18 @@ notes:
     Back: |
       ![](CCAC-02.8-19.1.jpg)
     Annotations: ''
+- id: 1547213342295
+  media:
+  - path: ${file_dir}/images/02.8-21.1.jpg
+    name: CCAC-02.8-21.1.jpg
+  fields:
+    Front: >
+      CCAC 02.8 21: Sketch the graph of a function that satisfies all of the given
+      conditions.
+
+      $f'(0) = f'(2) = f'(4) = 0$, $f'(x) > 0$ if $x < 0$ or $2 < x < 4$, $f'(x) <
+      0$ if $0 < x < 2$ or $x > 4$, $f''(x) > 0$ if $1 < x < 3$, $f''(x) < 0$ if $x
+      < 1$ or $x > 3$.
+    Back: |
+      ![](CCAC-02.8-21.1.jpg)
+    Annotations: ''
