--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -198,3 +198,16 @@ notes:
       (b) Minimum at $x = 0$.
     Annotations: ''
   tags: []
+- id: 1547213342746
+  fields:
+    Front: |
+      CCAC 02.8 27: Let $f(x) = x^3 - x$. In CCAC Examples 2.7.3 and 2.7.7, we showed that $f'(x) = 3x^2 - 1$ and $f''(x) = 6x$. Use these facts to find the following.
+      (a) The intervals on which $f$ is increasing or decreasing.
+      (b) The intervals on which $f$ is concave upward or downward.
+      (c) The inflection point $f$.
+    Back: |
+      (a) Increasing on $\left(-\infty, -\sqrt{\frac{1}{3}}\right)$, $\left(\sqrt{\frac{1}{3}}, \infty\right)$; decreasing on $\left(-\sqrt{\frac{1}{3}}, \sqrt{\frac{1}{3}}\right)$.
+      (b) Concave upward on $(0, \infty)$; concave downward on $(-\infty, 0)$.
+      (c) Inflection point at $(0,0)$.
+    Annotations: ''
+  tags: []
