--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -211,3 +211,15 @@ notes:
       (c) Inflection point at $(0,0)$.
     Annotations: ''
   tags: []
+- id: 1547213342872
+  media:
+  - path: ${file_dir}/images/02.8-29.1.jpg
+    name: CCAC-02.8-29.1.jpg
+  fields:
+    Front: |
+      CCAC 02.8 29: The graph of a function $f$ is shown. Which graph is an antiderivative of $f$, and why?
+      ![](CCAC-02.8-29.1.jpg)
+    Back: |
+      $b$
+    Annotations: ''
+  tags: []
