--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -22,3 +22,15 @@ notes:
     Back: |
       False
     Annotations: ''
+- id: 1547231973246
+  fields:
+    Front: |
+      CCAC 02.Review, True-False 03: Determine whether the statement is true or false.
+      $$$$
+      \lim_{x \to 1} \frac{x - 3}{x^2 + 2x - 4}
+      =
+      \frac{\lim_{x \to 1} (x - 3)}{\lim_{x \to 1} (x^2 + 2x - 4)}
+      $$$$
+    Back: |
+      True
+    Annotations: ''
