--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -127,3 +127,13 @@ notes:
     Back: |
       $1$
     Annotations: ''
+- id: 1547231974522
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 05: Find the limit.
+      $$$$
+      \lim_{x \to -3} \frac{x^2 - 9}{x^2 + 2x - 3}
+      $$$$
+    Back: |
+      $\frac{3}{2}$
+    Annotations: ''
