--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -137,3 +137,13 @@ notes:
     Back: |
       $\frac{3}{2}$
     Annotations: ''
+- id: 1547231974689
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 07: Find the limit.
+      $$$$
+      \lim_{h \to 0} \frac{(h - 1)^3 + 1}{h}
+      $$$$
+    Back: |
+      $3$
+    Annotations: ''
