--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -177,3 +177,13 @@ notes:
     Back: |
       $-\infty$
     Annotations: ''
+- id: 1547231975263
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 15: Find the limit.
+      $$$$
+      \lim_{x \to \infty} \frac{\sqrt{x^2 - 9}}{2x - 6}
+      $$$$
+    Back: |
+      $\frac{1}{2}$
+    Annotations: ''
