--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -187,3 +187,13 @@ notes:
     Back: |
       $\frac{1}{2}$
     Annotations: ''
+- id: 1547231975393
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 17: Find the limit.
+      $$$$
+      \lim_{x \to \infty} (\sqrt{x^2 + 4x + 1} - x)
+      $$$$
+    Back: |
+      $2$
+    Annotations: ''
