--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -255,3 +255,14 @@ notes:
     Annotations: ''
   tags:
   - ToDo
+- id: 1547231976644
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 27: The displacement (in meters) of an object moving in a straight line is given by $s = 1 + 2t + \frac{1}{4}t^2$, where $t$ is measured in seconds.
+      (a) Find the average velocity over each time period.
+        $\quad$ (i) $[1,3]$, (ii) $[1,2]$, (iii) $[1,1.5]$, (iv) $[1,1.1]$
+      (b) Find the instantaneous velocity when $t = 1$.
+    Back: |
+      (a) (i) $3$ m/s, (ii) $2.75$ m/s, (iii) $2.625$ m/s, (iv) $2.525$ m/s.
+      (b) $2.5$ m/s.
+    Annotations: ''
