--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-Review.yml
@@ -334,3 +334,13 @@ notes:
     Annotations: ''
   tags:
   - requiresCoding
+- id: 1547231977794
+  media:
+  - path: ${file_dir}/images/CCAC-02.Review-39.1.jpg
+  fields:
+    Front: |
+      CCAC 02.Review, Exercise 39: The graph of $f$ is shown. State, with reasons, the numbers at which $f$ is not differentiable.
+      ![](CCAC-02.Review-39.1.jpg)
+    Back: |
+      $-4$ (discontinuity); $-1$ (corner); $2$ (discontinuity); $5$ (vertical tangent).
+    Annotations: ''
