Add CCAC 3.1 00a, deriv of const fun

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -9,3 +9,13 @@ defaults:
   - CCAC-03-DifferentiationRules
   - CCAC-03.01-DerivativesOfPolynomialsAndExponentialFunctions
   markdownTabLength: 2
+notes:
+- id: 1547241826746
+  fields:
+    Front: |
+      CCAC 03.01 00a: What is the **Derivative of a Constant Function?**.
+    Back: |
+      $$$$
+      \frac{d}{dx} (c) = 0
+      $$$$
+    Annotations: ''
