Add CCAC 3.1 00c, sum rule

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -41,3 +41,14 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547241827092
+  fields:
+    Front: |
+      CCAC 03.01 00d: State the **Sum Rule** of differentiation.
+    Back: |
+      If $f$ and $g$ are both differentiable, then
+      $$$$
+      (f + g)' = f' + g'
+      $$$$
+    Annotations: ''
+  tags: []
