--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -73,3 +73,13 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547241827421
+  fields:
+    Front: |
+      CCAC 03.01 01a: How is the number $e$ defined?
+    Back: |
+      $e$ is the number such that
+      $$$$
+      \lim_{h \to 0} \frac{e^h - 1}{h} = 1.
+      $$$$
+    Annotations: ''
