--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -83,3 +83,16 @@ notes:
       \lim_{h \to 0} \frac{e^h - 1}{h} = 1.
       $$$$
     Annotations: ''
+  tags: []
+- id: 1547241827520
+  fields:
+    Front: |
+      CCAC 03.01 01b: Use a calculator to estimate the values of the limits
+      $$$$
+      \lim_{h \to 0} \frac{2.7^h - 1}{h} \quad \text{and} \quad \lim_{h \to 0} \frac{2.8^h - 1}{h}
+      $$$$
+      correct to two decimal places. What can you conclude about the value of $e$?
+    Back: |
+      $0.99$, $1.03$; $2.7 < e < 2.8$.
+    Annotations: ''
+  tags: []
