--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -200,3 +200,16 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547241828504
+  fields:
+    Front: |
+      CCAC 03.01 19: Differentiate the function.
+      $$$$
+      y = \frac{x^2 + 4x + 3}{\sqrt{x}}
+      $$$$
+    Back: |
+      $$$$
+      y' = \frac{3}{2}\sqrt{x} + \frac{2}{\sqrt{x}} - \frac{3}{2x\sqrt{x}}
+      $$$$
+    Annotations: ''
+  tags: []
