--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -213,3 +213,16 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547241828595
+  fields:
+    Front: |
+      CCAC 03.01 21: Differentiate the function.
+      $$$$
+      y = 4\pi^2
+      $$$$
+    Back: |
+      $$$$
+      y' = 0
+      $$$$
+    Annotations: ''
+  tags: []
