--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -276,3 +276,17 @@ notes:
       Tangent: $y = 2x + 2$; normal: $y = -\frac{1}{2}x + 2$.
     Annotations: ''
   tags: []
+- id: 1547241829124
+  fields:
+    Front: |
+      CCAC 03.01 31: Find an equation of the tangent line to the curve at the given point. Illustrate by graphing the curve and the tangent line on the same screen.
+      $$$$
+      y = 3x^2 - x^3, \quad (1, 2)
+      $$$$
+    Back: |
+      $$$$
+      y = 3x - 1
+      $$$$
+    Annotations: ''
+  tags:
+  - requiresCoding
